...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="C5g-jS-0MU" id="8r9-m2-qZW"/>
                            <outlet property="delegate" destination="C5g-jS-0MU" id="F1l-XP-1Wi"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="MCSL Mobile" largeTitleDisplayMode="always" id="ioZ-zT-ACp">
                        <barButtonItem key="backBarButtonItem" title="Teams" id="AcN-sz-qjd"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="nxA-HB-Mmo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1509" y="185"/>
        </scene>
...
                                            <rect key="frame" x="59" y="31.5" width="44" height="14.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="star" catalog="system" id="iER-Zi-xI7">
                                            <rect key="frame" x="21" y="17" width="22" height="20"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </imageView>
                                    </subviews>
                                </tableViewCellContentView>
                                <connections>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <segmentedControl key="tableHeaderView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="XdL-eX-Hlv">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="32"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Week 1"/>
                                <segment title="Week 2"/>
                                <segment title="Week 3"/>
                                <segment title="Week 4"/>
                                <segment title="Week 5"/>
                            </segments>
                            <connections>
                                <action selector="segmentChange:" destination="8Fa-aq-2WX" eventType="valueChanged" id="8ks-mU-NKs"/>
                            </connections>
                        </segmentedControl>
                        <prototypes>
...
            <point key="canvasLocation" x="645" y="-510"/>
        </scene>
        <!--Home-->
        <scene sceneID="I7s-g6-Wzc">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kbt-eh-MUf" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="ETp-pz-gq5"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="tma-hG-ThZ">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="645" y="185"/>
        </scene>
        <!--Settings-->
        <scene sceneID="cnV-eY-dqO">
            <objects>
                <hostingController id="rSM-aA-3NY" customClass="SettingsViewController" customModule="MCSL_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="gearshape.fill" catalog="system" id="6fV-gU-ceh"/>
                </hostingController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ttd-4n-kmq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="645" y="900"/>
        </scene>
    </scenes>
...
