...
                NavigationLink(
                    destination: IconsView(),
                    label: {
                        HStack{
                            Image(systemName: "wand.and.stars")
                                .foregroundColor(.accentColor)
                            Text("Alternative Icons")
                        }
                    })
            }
        }
    }
    
...
