...
            if #available(iOS 14.0, *) {
                ZStack{
                    Color.init(.systemGroupedBackground)
                        .ignoresSafeArea()
                    list
                        .listStyle(InsetGroupedListStyle())
                        .navigationTitle("Favorites")
                }
            } else {
                // Fallback on earlier versions
                ZStack{
                    Color.init(.systemGroupedBackground)
                        .edgesIgnoringSafeArea(.all)
...
